Guide places update
Přidání ostatních lokací do guide

--- a/guide/index.html
+++ b/guide/index.html
@@ -56,17 +56,7 @@
             </div>
             <div class="filterButton action">
               <div class="checkbox">
-                <label><input type="checkbox" rel="restaurant" onchange="change()" /><span>Restaurant</span></label>
-              </div>
-            </div>
-            <div class="filterButton action">
-              <div class="checkbox">
-                <label><input type="checkbox" rel="bistro" onchange="change()" /><span>Bistro</span></label>
-              </div>
-            </div>
-            <div class="filterButton action">
-              <div class="checkbox">
-                <label><input type="checkbox" rel="donuts" onchange="change()" /><span>Donuts</span></label>
+                <label><input type="checkbox" rel="food" onchange="change()" /><span>Food</span></label>
               </div>
             </div>
             <div class="filterButton action">
@@ -110,90 +100,171 @@
               </div>
 
             </div>-->
-            <div class="cafe">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/pikola.jpg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Café</p>
-                  <h3 class="imageName">Pikola</h3>
-                  <p class="imageAddress">Polská 3, Šumperk</p>
+              <div class="cafe">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/pikola.jpg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Café</p>
+                      <h3 class="imageName">Pikola</h3>
+                      <p class="imageAddress">Polská 3, Šumperk</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-          </div>
-
-            <div class="cafe">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/pikolaZ.jpeg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Café</p>
-                  <h3 class="imageName">Pikola</h3>
-                  <p class="imageAddress">Zábřežská, Šumperk</p>
-                </div>
-              </div>
             </div>
 
-            <div class="cafe">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/kavomilka.jpg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Café</p>
-                  <h3 class="imageName">Kávomilka</h3>
-                  <p class="imageAddress">Krátká 2863/2, Růžová, Šumperk</p>
+              <div class="cafe">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/pikolaZ.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Café</p>
+                      <h3 class="imageName">Pikola</h3>
+                      <p class="imageAddress">Zábřežská, Šumperk</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="restaurant">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/bistrojj.jpeg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Restaurant</p>
-                  <h3 class="imageName">Bistro J&J</h3>
-                  <p class="imageAddress">Gen. Svobody 244/9, Šumperk</p>
+              <div class="cafe">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/kavomilka.jpg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Café</p>
+                      <h3 class="imageName">Kávomilka</h3>
+                      <p class="imageAddress">Krátká 2863/2, Růžová, Šumperk</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="bistro">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/cakir.jpeg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Bistro</p>
-                  <h3 class="imageName">Cakir's Burger</h3>
-                  <p class="imageAddress">nám. Míru 22, Šumperk</p>
+              <div class="food">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/bistrojj.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Restaurant</p>
+                      <h3 class="imageName">Bistro J&J</h3>
+                      <p class="imageAddress">Gen. Svobody 244/9, Šumperk</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="restaurant">
-              <div class="image_wrapper">
-                <img class="placeImage" src="Images/arte.jpeg" alt="" />
-                <div class="overlay overlay_2">
-                  <p class="imageCategory">Restaurant</p>
-                  <h3 class="imageName">Arte</h3>
-                  <p class="imageAddress">Husitská 2635, Šumperk</p>
+              <div class="food">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/cakir.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Bistro</p>
+                      <h3 class="imageName">Cakir's Burger</h3>
+                      <p class="imageAddress">nám. Míru 22, Šumperk</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="donuts">
+              <div class="food">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/arte.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Restaurant</p>
+                      <h3 class="imageName">Arte</h3>
+                      <p class="imageAddress">Husitská 2635, Šumperk</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="food">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/donutpoint.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Donuts</p>
+                      <h3 class="imageName">Donutpoint</h3>
+                      <p class="imageAddress">Hlavní tř. 8/13, Šumperk</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="education">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/prumka.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Education</p>
+                      <h3 class="imageName">VOŠ a SPŠ Šumperk</h3>
+                      <p class="imageAddress">Gen. Krátkého 950, Šumperk</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="education">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/gymplSumperk.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Education</p>
+                      <h3 class="imageName">Gymnázium Šumperk</h3>
+                      <p class="imageAddress">Masarykovo nám. 1207/8, Šumperk</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="education">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/szssumperk.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Education</p>
+                      <h3 class="imageName">SZŠ Šumperk</h3>
+                      <p class="imageAddress">Kladská 234, Šumperk</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="education">
+                <div class="image_wrapper">
+                  <img class="placeImage" src="Images/copka.jpeg" alt="" />
+                  <div class="overlay overlay_2">
+                    <div class="textPlace">
+                      <p class="imageCategory">Education</p>
+                      <h3 class="imageName">Střední škola Řemesel Šumperk</h3>
+                      <p class="imageAddress">Gen. Krátkého 1799/30, Šumperk</p>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+
+            <div class="education">
               <div class="image_wrapper">
-                <img class="placeImage" src="Images/donutpoint.jpeg" alt="" />
+                <img class="placeImage" src="Images/oa.jpeg" alt="" />
                 <div class="overlay overlay_2">
-                  <p class="imageCategory">Donuts</p>
-                  <h3 class="imageName">Donutpoint</h3>
-                  <p class="imageAddress">Hlavní tř. 8/13, Šumperk</p>
+                  <div class="textPlace">
+                    <p class="imageCategory">Education</p>
+                    <h3 class="imageName">Obchodní Akademie Šumperk</h3>
+                    <p class="imageAddress">Hlavní tř. 652, Šumperk</p>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="education">
               <div class="image_wrapper">
-                <img class="placeImage" src="Images/prumka.jpeg" alt="" />
+                <img class="placeImage" src="Images/oa.jpeg" alt="" />
                 <div class="overlay overlay_2">
-                  <p class="imageCategory">Education</p>
-                  <h3 class="imageName">VOŠ a SPŠ Šumperk</h3>
-                  <p class="imageAddress">Gen. Krátkého 1, Šumperk</p>
+                  <div class="textPlace">
+                    <p class="imageCategory">Education</p>
+                    <h3 class="imageName">Obchodní Akademie Šumperk</h3>
+                    <p class="imageAddress">Hlavní tř. 652, Šumperk</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -203,8 +274,6 @@
       </div>
     </div>
   </div>
-  </div>
-</div>
 
 <div id="loader-wrapper-Guide" class="loading">
   <div id="animG"></div>
